; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_sati_mode_sense_10.c_sati_mode_sense_10_control_translate_data.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_sati_mode_sense_10.c_sati_mode_sense_10_control_translate_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SCSI_MODE_PAGE_0A_LENGTH = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sati_mode_sense_10_control_translate_data(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** %7, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call i64 @sati_mode_sense_calculate_page_header(i8* %12, i32 10)
  %14 = load i64, i64* @SCSI_MODE_PAGE_0A_LENGTH, align 8
  %15 = add nsw i64 %13, %14
  store i64 %15, i64* %8, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = load i64, i64* %8, align 8
  %20 = call i32 @sati_mode_sense_10_translate_data(i32* %16, i32* %17, i8* %18, i64 %19)
  store i32 %20, i32* %9, align 4
  %21 = load i32*, i32** %4, align 8
  %22 = load i8*, i8** %6, align 8
  %23 = load i32*, i32** %7, align 8
  %24 = load i32, i32* %9, align 4
  %25 = call i32 @sati_mode_sense_control_translate_data(i32* %21, i8* %22, i32* %23, i32 %24)
  ret void
}

declare dso_local i64 @sati_mode_sense_calculate_page_header(i8*, i32) #1

declare dso_local i32 @sati_mode_sense_10_translate_data(i32*, i32*, i8*, i64) #1

declare dso_local i32 @sati_mode_sense_control_translate_data(i32*, i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
